[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

[dependencies]

argon2 = "0.5.0"
axum = "0.7.7"
axum-extra = { version = "0.9.4", features = ["cookie"] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.8.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
time = "0.3.35"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }

tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.40"
futures-util = "0.3.28"